--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   "author": "Aleksey",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.2.3",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.7",
+    "autoprefixer": "^7.2.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "node-static": "^0.7.10",
-    "postcss": "^6.0.14",
+    "node-sass": "^4.11.0",
+    "node-static": "^0.7.11",
+    "postcss": "^6.0.23",
     "postcss-cli": "^4.1.1",
-    "postcss-loader": "^2.0.9",
-    "postcss-scss": "^1.0.2",
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0",
-    "sass-loader": "^6.0.6",
+    "postcss-loader": "^2.1.6",
+    "postcss-scss": "^1.0.6",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-merge": "^4.1.1"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": ">=3.1.11",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "normalize.css": "^7.0.0"
   }
 }
